force-app/main/default/objects/Guided_Selling__c/Guided_Selling__c.object-meta.xml
<CustomObject>
    <description>Object used to store product recommendations to Care Agents using Next Best Action</description>
    <label>Guided Selling</label>
    <nameField>
        <displayFormat>GS-{0000}</displayFormat>
        <label>Guided Selling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Selling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>