force-app/main/default/objects/Guided_Selling__c/fields/Purchased_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product_Line__c</fullName>
    <label>Purchased Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>RM Secure Storage</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>