force-app/main/default/objects/Guided_Selling__c/fields/Purchased_Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product_Line_Text__c</fullName>
    <formula>TEXT(Purchased_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchased Product Line (Text)</label>
    <type>Text</type>
</CustomField>