force-app/main/default/objects/Guided_Selling__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Image on Demand</fullName>
            </value>
            <value>
                <fullName>Physical Storage</fullName>
            </value>
            <value>
                <fullName>Scanning</fullName>
            </value>
            <value>
                <fullName>Scanning - Non-Recurring</fullName>
            </value>
            <value>
                <fullName>Secure IT Asset Disposition</fullName>
            </value>
            <value>
                <fullName>Shredding</fullName>
            </value>
            <value>
                <fullName>Storage Service</fullName>
            </value>
            <value>
                <fullName>Vaulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>