force-app/main/default/objects/Guided_Selling__c/recordTypes/Initial_Flow_Scripts.recordType-meta.xml
<RecordType>
    <fullName>Initial_Flow_Scripts</fullName>
    <active>true</active>
    <label>Initial Flow Scripts</label>
</RecordType>