force-app/main/default/objects/Guided_Selling__c/recordTypes/Product_Recommendations.recordType-meta.xml
<RecordType>
    <fullName>Product_Recommendations</fullName>
    <active>true</active>
    <label>Product Recommendations</label>
</RecordType>