force-app/main/default/objects/Guided_Selling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Priority__c</columns>
    <columns>Purchased_Product_Line__c</columns>
    <columns>Non_Purchased_Product_Line__c</columns>
    <columns>Recommendation__c</columns>
    <columns>How_would_it_help__c</columns>
    <columns>Script__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Guided_Selling__c.Initial_Flow_Scripts</value>
    </filters>
    <label>All</label>
</ListView>