force-app/main/default/objects/Guided_Selling__c/listViews/All_Initial_Scripts_per_prod.listView-meta.xml
<ListView>
    <fullName>All_Initial_Scripts_per_prod</fullName>
    <columns>NAME</columns>
    <columns>One_Product_Initial_Script__c</columns>
    <columns>Script__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Guided_Selling__c.Initial_Flow_Scripts</value>
    </filters>
    <label>All Initial Scripts (per # prod)</label>
</ListView>